@@ -581,7 +581,7 @@ func testV1FIdxCaSetStatQueueProfile(t *testing.T) {
 			TTL:         time.Duration(10) * time.Second,
 			Metrics: []*engine.MetricWithFilters{
 				{
-					MetricID: "*sum:~*req.Val",
+					MetricID: "*sum#~*req.Val",
 				},
 			},
 			ThresholdIDs: []string{"Val1", "Val2"},
@@ -744,7 +744,7 @@ func testV1FIdxCaUpdateStatQueueProfile(t *testing.T) {
 			TTL:         time.Duration(10) * time.Second,
 			Metrics: []*engine.MetricWithFilters{
 				{
-					MetricID: "*sum:~*req.Val",
+					MetricID: "*sum#~*req.Val",
 				},
 			},
 			ThresholdIDs: []string{"*none"},
