@@ -234,10 +234,10 @@ cgrates.org,ResGroup22,*string:~*req.Account:dan,2014-07-29T15:00:00Z,3600s,2,pr
 `
 	StatsCSVContent = `
 #Tenant[0],Id[1],FilterIDs[2],ActivationInterval[3],QueueLength[4],TTL[5],MinItems[6],Metrics[7],MetricFilterIDs[8],Stored[9],Blocker[10],Weight[11],ThresholdIDs[12]
-cgrates.org,TestStats,*string:~*req.Account:1001,2014-07-29T15:00:00Z,100,1s,2,*sum:~*req.Value;*average:~*req.Value,,true,true,20,Th1;Th2
-cgrates.org,TestStats,,,,,2,*sum:~*req.Usage,,true,true,20,
-cgrates.org,TestStats2,FLTR_1,2014-07-29T15:00:00Z,100,1s,2,*sum:~*req.Value;*sum:~*req.Usage;*average:~*req.Value;*average:~*req.Usage,,true,true,20,Th
-cgrates.org,TestStats2,,,,,2,*sum:~*req.Cost;*average:~*req.Cost,,true,true,20,
+cgrates.org,TestStats,*string:~*req.Account:1001,2014-07-29T15:00:00Z,100,1s,2,*sum#~*req.Value;*average#~*req.Value,,true,true,20,Th1;Th2
+cgrates.org,TestStats,,,,,2,*sum#~*req.Usage,,true,true,20,
+cgrates.org,TestStats2,FLTR_1,2014-07-29T15:00:00Z,100,1s,2,*sum#~*req.Value;*sum#~*req.Usage;*average#~*req.Value;*average#~*req.Usage,,true,true,20,Th
+cgrates.org,TestStats2,,,,,2,*sum#~*req.Cost;*average#~*req.Cost,,true,true,20,
 `
 
 	ThresholdsCSVContent = `
